common-applications/control/cloudsca/analysis.yaml
# Deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sca-analysis
  namespace: sca
spec:
  replicas: 0
  selector:
    matchLabels:
      app: sca-analysis
  template:
    metadata:
      labels:
        app: sca-analysis
    spec:
      imagePullSecrets:
        - name: huawei-swr-image-pull-secret
      containers:
      - name: sca-analysis
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/sca-analysis:335b5599b83f08c67ee2430323bc43e69c6c4a61
        imagePullPolicy: IfNotPresent
        ports:
        - name: app-port
          containerPort: 8015
        resources:
          requests:
            cpu: 500m
            memory: 2G
          limits:
            cpu: 1000m
            memory: 4G
        volumeMounts:
        - mountPath: /work.ks
          name: secret-volume
          subPath: work_ks
        - mountPath: /primary.ks
          name: secret-volume
          subPath: primary_ks
        - mountPath: /standby.ks
          name: secret-volume
          subPath: standby_ks
      volumes:
      - name: secret-volume
        secret:
          secretName: sca-secret
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: sca-analysis
  namespace: sca
  labels:
    app: sca-analysis
spec:
  type: ClusterIP
  ports:
    - port: 8015
      protocol: TCP
      name: analysis-app
      targetPort: 8015
  selector:
    app: sca-analysis
