common-applications/control/cloudsca/api-gateway.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sca-api-gateway
  namespace: sca
spec:
  replicas: 0
  selector:
    matchLabels:
      app: sca-api-gateway
  template:
    metadata:
      labels:
        app: sca-api-gateway
    spec:
      imagePullSecrets:
        - name: huawei-swr-image-pull-secret
      containers:
      - name: sca-api-gateway
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/sca-api-gateway:aade5285865d3ba2efe4ad156e56074409ae21a7
        imagePullPolicy: IfNotPresent
        ports:
        - name: app-port
          containerPort: 8020
        resources:
          requests:
            cpu: 200m
            memory: 1024Mi
          limits:
            cpu: 1000m
            memory: 2G
        volumeMounts:
        - mountPath: /work.ks
          name: secret-volume
          subPath: work_ks
        - mountPath: /primary.ks
          name: secret-volume
          subPath: primary_ks
        - mountPath: /standby.ks
          name: secret-volume
          subPath: standby_ks
      volumes:
      - name: secret-volume
        secret:
          secretName: sca-secret

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: sca-api-gateway
  namespace: sca
  labels:
    app: sca-api-gateway
spec:
  type: ClusterIP
  ports:
    - port: 8020
      name: api-gateway-app
      protocol: TCP
      targetPort: 8020
  selector:
    app: sca-api-gateway
