common-applications/control/cloudsca/dm.yaml
# Deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sca-dm
  namespace: sca
spec:
  replicas: 0
  selector:
    matchLabels:
      app: sca-dm
  template:
    metadata:
      labels:
        app: sca-dm
    spec:
      imagePullSecrets:
        - name: huawei-swr-image-pull-secret
      containers:
      - name: sca-dm
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/sca-datamanager:335b5599b83f08c67ee2430323bc43e69c6c4a61
        imagePullPolicy: IfNotPresent
        ports:
        - name: app-port
          containerPort: 7979
        resources:
          requests:
            cpu: 200m
            memory: 2G
          limits:
            cpu: 2000m
            memory: 6G
        volumeMounts:
        - mountPath: /work.ks
          name: secret-volume
          subPath: work_ks
        - mountPath: /primary.ks
          name: secret-volume
          subPath: primary_ks
        - mountPath: /standby.ks
          name: secret-volume
          subPath: standby_ks
      volumes:
      - name: secret-volume
        secret:
          secretName: sca-secret

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: sca-dm
  namespace: sca
  labels:
    app: sca-dm
spec:
  type: ClusterIP
  ports:
    - port: 7979
      protocol: TCP
      name: dm-app
      targetPort: 7979
  selector:
    app: sca-dm
