common-applications/control/cloudsca/eureka.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: sca
  labels:
    app: eureka
spec:
  type: ClusterIP
  ports:
    - port: 9000
      name: eureka
      targetPort: 9000
  selector:
    app: eureka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
  namespace: sca
spec:
  replicas: 2
  serviceName: "eureka"
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      imagePullSecrets:
        - name: huawei-swr-image-pull-secret
      containers:
        - name: eureka
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/sca-eureka:2da74f4f19e420bdc7233954881e632c1c57eae0
          ports:
            - containerPort: 9000
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 600Mi
          volumeMounts:
          - mountPath: /work.ks
            name: secret-volume
            subPath: work_ks
          - mountPath: /primary.ks
            name: secret-volume
            subPath: primary_ks
          - mountPath: /standby.ks
            name: secret-volume
            subPath: standby_ks
        volumes:
        - name: secret-volume
          secret:
            secretName: sca-secret
