common-applications/control/cloudsca/gateway.yaml
# Deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sca-gateway
  namespace: sca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sca-gateway
  template:
    metadata:
      labels:
        app: sca-gateway
    spec:
      imagePullSecrets:
        - name: huawei-swr-image-pull-secret
      containers:
      - name: sca-gateway
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/sca-gateway:335b5599b83f08c67ee2430323bc43e69c6c4a61
        imagePullPolicy: IfNotPresent
        ports:
        - name: app-port
          containerPort: 8015
        resources:
          requests:
            cpu: 200m
            memory: 1024Mi
          limits:
            cpu: 800m
            memory: 2G
        volumeMounts:
        - mountPath: /work.ks
          name: secret-volume
          subPath: work_ks
        - mountPath: /primary.ks
          name: secret-volume
          subPath: primary_ks
        - mountPath: /standby.ks
          name: secret-volume
          subPath: standby_ks
      volumes:
      - name: secret-volume
        secret:
          secretName: sca-secret

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: sca-gateway
  namespace: sca
  labels:
    app: sca-gateway
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: gateway-app
      protocol: TCP
      targetPort: 8080
  selector:
    app: sca-gateway
