common-applications/control/cloudsca/rabbitmq.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: sca
spec:
  type: ClusterIP
  ports:
  - port: 5672
    name: http1
    protocol: TCP
    targetPort: 5672
  - port: 15672
    name: http2
    protocol: TCP
    targetPort: 15672
  selector:
    app: rabbitmq

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: sca
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/radia-test/rabbitmq:v1.0.1
        imagePullPolicy: IfNotPresent
        readinessProbe:
          tcpSocket:
            port: 5672
          initialDelaySeconds: 10
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 5672
          initialDelaySeconds: 20
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 1000m
            memory: 2G
          limits:
            cpu: 2000m
            memory: 4G
        volumeMounts:
        - mountPath: /var/lib/rabbitmq
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: rabbitmq-data-volume
