common-applications/control/cloudsca/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/custom-http-errors: "400, 500"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-User, X-Auth-Request-Groups, X-Auth-Request-Email, X-Auth-Request-Preferred-Username, X-Auth-Request-Access-Token"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  name: cloudsca
  namespace: sca
spec:
  tls:
    - hosts:
        - sca.osinfra.cn
      secretName: sca-secret-lts
  rules:
    - host: sca.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: sca-web
              servicePort: 8528
            path: /(.*)
          - backend:
              serviceName: sca-gateway
              servicePort: 8080
            path: /gateway/(.*)
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: cloudsca-proxy
  namespace: sca
spec:
  tls:
    - hosts:
        - sca.osinfra.cn
      secretName: sca-secret-lts
  rules:
    - host: sca.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: oauth2-proxy
              servicePort: 4180
            path: /oauth2
